style.css
#sidebar {
    position: fixed;
    width: clamp(150px, 20%, 300px);
    height: 100%;
    border-right: 3px solid black;
    left: 0;
    top: 0;
    overflow: auto;
}

#sidebar h2 {
    text-align: center;
    text-indent: -2ch;
}

#tables {
    position: absolute;
    left: clamp(150px, 20%, 300px);
    width: fit-content;
    width: -webkit-fill-available;
    width: -moz-available;
    height: 100%;
}

#room {
    width: 100%;
    height: calc(100% - 50px - 50px);   /* 50px top (sliders); 50px bottom (presets) */
    display: flex;
    align-items: center;
    justify-content: space-around;
    overflow: auto;
    flex-flow: column nowrap;
}

#pult {
    width: 100%;
    border: 1px solid black;
    border-left: none;
    border-right: none;
    min-width: 2em;
    line-height: 1;
    text-align: center;
    padding: 2em 0;
    margin: unset auto;
    position: sticky;
    left: 0;
}

#sliders {
    height: 50px;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
}

#sliders > div {
    width: 50%;
}

#sliders #horizontal-slider-container .slider-counter::before {
    content: "Spalten:";
}

#sliders #vertical-slider-container .slider-counter::before {
    content: "Reihen:";
}

#sliders input[type=range] {
    width: 70%;
}

#room-table {
    height: fit-content;
    height: -moz-available;
    margin: 0 auto;

}

#room-table tr {
    height: 100%;
}

#room-table .table {
    min-height: 3em;
    min-width: 20ch;
    outline: 1px solid black;
    border-collapse: collapse;
    width: min-content;
    overflow-wrap: anywhere;
}

#room-table .table .student-table {
    min-height: 5em;
    display: flex;
    align-items: center;
    align-content: center;
    cursor: pointer;
}

#room-table .table.is-table .student-table {
    background-color: skyblue;
}

#room-table .table.is-table .student-table:has(.has-student) {
    cursor: move;
}

#room-table .table .student-table .student-name {
    width: 100%;
    text-align: center;
}

#sidebar #student-list {
    list-style: none;
    margin: 0;
    padding: 0;
    margin-top: 10px;
    margin-bottom: 3em;
}

#sidebar #student-list li {
    display: flex;
    flex-flow: row nowrap;
    height: 3em;
}

#sidebar #student-list li .student-name {
    flex-grow: 1;
    min-width: 1px;  /* another wierd fix */
    padding: 1em;
    height: 100%;
    cursor: move;
    line-height: 1;
    border-top: 1px solid black;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

#sidebar #student-list li .student-name:hover {
    background-color: lightgray;
}

#sidebar #student-list li button {
    height: 100%;
    margin: 0;
    padding: 0;
    border: none;
    border-radius: 0;
    aspect-ratio: 1 / 1;
    outline: 1px solid black;
}

#student-list .student-edit, #add-student-button {
    background-color: #55d355;
    font-size: 130%;
}

#student-list .student-edit:hover, #add-student-button:hover {
    background-color: #90ee90;
}

#student-list .student-delete {
    background-color: #ff0000;
    color: white;
    font-weight: 1000;
    font-size: 30px;
}

#student-list .student-delete:hover {
    background-color: rgb(255, 92, 92);
}

#student-list li:last-child {
    border-top: 1px solid black;
    border-width: 2px;
}
#student-list li:last-child form {
    width: 100%;
    display: flex;
    align-items: center;
    height: 3em;
    border-bottom: 1px solid black;
}

#student-list li:last-child form input {
    flex-grow: 1;
    min-width: 1px;   /* weird fix lol */
    height: 100%;
    font-size: 120%;
    text-indent: 1ch;
    border: none;
    outline: none;
}

#student-list li:last-child form #add-student-button {
    border-radius: 0;
    font-size: 240%;
    line-height: 1;
}

.dragged .student-actions {
    display: none;
}

.student-list-actions {
    height: 3em;
    display: flex;
    align-items: center;
    /* justify-content: space-evenly; */
}

.student-list-actions button {
    height: 100%;
    border: none;
    outline: 1px solid black; 
    flex-grow: 1;
}

#general-actions-list {
    /* position: absolute;
    bottom: 0; */
    padding: 0;
    margin: 0;
    margin-top: .5em;
    width: 100%;
    list-style: none;
}

#general-actions-list .general-action:last-child {
    border-bottom: 1px solid black;
}

#general-actions-list .general-action {
    width: 100%;
    height: 3em;
    border-top: 1px solid black;
}

#general-actions-list .general-action button {
    width: 100%;
    height: 100%;
    border: none;
    border-radius: 0;
}

button {
    cursor: pointer;
    font-size: 12pt;
}


#presets {
    position: absolute;
    height: 50px;
    bottom: 0;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    border-top: 3px solid black;
}

#presets .preset {
    border: none;
    border-radius: 0;
    flex: 1;
    height: 100%;
    font-size: 1.5em;
    background-color: #e9e9ed;
}

#presets .preset:nth-child(2n) {
    background-color: #cfcfd3;
}

#presets .preset:hover, #presets .preset:active {
    background-color: #9b9b9b;
}

#student-contextmenu {
    position: fixed;
    background-color: white;
    box-shadow: 1px 1px 5px black;
    border-radius: 3px;
    border: 1px solid black;
}

#student-contextmenu hr {
    margin: 0;
}

#student-contextmenu ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#student-contextmenu ul li :is(label, button) {
    padding: .5em 10px;
    cursor: pointer;
}

#student-contextmenu ul label {
    display: inline-block;
}

#student-contextmenu ul label:hover {
    font-style: italic;
}

#student-contextmenu ul button:not(:hover) {
    background-color: white;
}

#student-contextmenu button {
    border: none;
    border-radius: 0;
    height: 100%;
    width: 100%;
}


#settings-dialog {
    margin-top: 10%;
}

#settings-dialog .setting-container {
    width: 100%;
    margin: .5em 0;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-between;
    gap: 8ch;
}

#settings-dialog select {
    padding: .25em .5em;
    font-size: 10pt;
    cursor: pointer;
}

#settings-dialog #settings-close-button {
    text-align: right;
}


#sitting-rules {
    position: fixed;
    top: 5%;
    max-width: 90%;
    overflow: auto;
    margin-top: 0;
}

#sitting-rules details {
    margin-bottom: .5em;
}

#sitting-rules details summary {
    cursor: pointer;
}

#sitting-rules details ul {
    list-style: none;
    padding-left: 1em;
    margin: 0;
}

#sitting-rules details ul .single-student-sit-rule-item {
    padding: 0 .3em;
    display: flex;
    align-items: center;
    flex-flow: row nowrap;
    border-bottom: 1px solid black;
    height: 2em;
}


#sitting-rules details .student-entry {
    height: 1.5em;
    margin-top: 3px;
}

.student-entry input {
    height: 100%;
    border: none;
    outline: 1px solid black;
    border-radius: 0;
    text-indent: 1ch;
}

.student-entry button {
    border: none;
    border-radius: 0;
    background-color: #55d355;
    height: 100%;
    aspect-ratio: 1 / 1;
    line-height: 1;
}

.single-student-sit-rule-item .student-name {
    flex-grow: 1;
    min-width: 1px;  /* just preventing trouble */
    padding: .25em 0;
}

#sitting-rules .delete-button {
    border: none;
    border-radius: 0;
    aspect-ratio: 1 / 1;
    line-height: 1;
    background-color: red;
    color: white;
    height: 80%;
}

